fix(formcontrol): set min height to a proper value
affects: @entur/form

avoids too small input fields
applies to all form components

--- a/packages/form/src/BaseFormControl.scss
+++ b/packages/form/src/BaseFormControl.scss
@@ -16,6 +16,7 @@
   display: flex;
   position: relative;
   width: 100%;
+  min-height: 2.75rem;
 
   /* 
   We use pseudo elements to create the border design we need.
